Added new function that checks Canadian address
